--- a/src/styles.css
+++ b/src/styles.css
@@ -85,7 +85,7 @@
 }
 
 @theme inline {
-	--font-sans: "FigTree Variable", sans-serif;
+	--font-sans: "Plus Jarkarta Sans Variable", sans-serif;
 	--color-sidebar-ring: var(--sidebar-ring);
 	--color-sidebar-border: var(--sidebar-border);
 	--color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
